[package]
name = "joie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.4"
bytemuck = { version = "1.13.1", features = ["derive"] }
logos = "0.13.0"
memchr = "2.5.0"
peg = "0.8.1"
perfect-map = { git = "https://github.com/emily-signet/perfect-map", version = "0.1.0" }
rayon = "1.7.0"
rkyv = { version = "0.7.42", features = ["smallvec"] }
rust-stemmers = "1.2.0"
smallvec = { version = "1.11.0", features = ["union", "const_generics"] }
smartstring = "1.0.1"
storage = { path = "../storage" }
unicode-segmentation = "1.10.1"
yoke = { version = "0.7.1", features = ["derive"] }
