[package]
name = "fatt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.13.1", features = ["derive"] }
easybench = "1.1.1"
joie = { version = "0.1.0", path = "../search" }
rkyv = "0.7.42"
serde = { version = "1.0.169", features = ["derive"] }
serde_json = "1.0.100"
storage = { version = "0.1.0", path = "../storage" }
